update allen annotation

--- a/code/allen-data-preprocess.ipynb
+++ b/code/allen-data-preprocess.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +90,12 @@
        "      <th>class_color</th>\n",
        "      <th>cl</th>\n",
        "      <th>cluster_size</th>\n",
-       "      <th>size</th>\n",
+       "      <th>tree_order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Lamp5 Pax6</td>\n",
        "      <td>#DDACC9</td>\n",
@@ -107,10 +107,10 @@
        "      <td>#F05A28</td>\n",
        "      <td>1</td>\n",
        "      <td>700</td>\n",
-       "      <td>700</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Lamp5 Egln3_1</td>\n",
        "      <td>#FF88AD</td>\n",
@@ -122,10 +122,10 @@
        "      <td>#F05A28</td>\n",
        "      <td>2</td>\n",
        "      <td>618</td>\n",
-       "      <td>618</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Lamp5 Egln3_2</td>\n",
        "      <td>#DD8091</td>\n",
@@ -137,10 +137,10 @@
        "      <td>#F05A28</td>\n",
        "      <td>3</td>\n",
        "      <td>814</td>\n",
-       "      <td>814</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Lamp5 Egln3_3</td>\n",
        "      <td>#F08E98</td>\n",
@@ -152,10 +152,10 @@
        "      <td>#F05A28</td>\n",
        "      <td>4</td>\n",
        "      <td>1276</td>\n",
-       "      <td>1276</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Lamp5 Pdlim5_1</td>\n",
        "      <td>#FF7290</td>\n",
@@ -167,10 +167,10 @@
        "      <td>#F05A28</td>\n",
        "      <td>5</td>\n",
        "      <td>1288</td>\n",
-       "      <td>1288</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -185,7 +185,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>111</td>\n",
+       "      <th>111</th>\n",
        "      <td>112</td>\n",
        "      <td>Peri</td>\n",
        "      <td>#A77C70</td>\n",
@@ -193,14 +193,14 @@
        "      <td>Peri</td>\n",
        "      <td>#665547</td>\n",
        "      <td>3</td>\n",
-       "      <td>Non-Neuronal</td>\n",
+       "      <td>Other</td>\n",
        "      <td>#808080</td>\n",
        "      <td>103</td>\n",
        "      <td>1532</td>\n",
-       "      <td>1532</td>\n",
+       "      <td>112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>112</td>\n",
+       "      <th>112</th>\n",
        "      <td>113</td>\n",
        "      <td>Micro</td>\n",
        "      <td>#6E7C6F</td>\n",
@@ -208,14 +208,14 @@
        "      <td>Micro-PVM</td>\n",
        "      <td>#94AF97</td>\n",
        "      <td>3</td>\n",
-       "      <td>Non-Neuronal</td>\n",
+       "      <td>Other</td>\n",
        "      <td>#808080</td>\n",
        "      <td>106</td>\n",
        "      <td>8110</td>\n",
-       "      <td>8110</td>\n",
+       "      <td>113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>113</td>\n",
+       "      <th>113</th>\n",
        "      <td>114</td>\n",
        "      <td>PVM_1</td>\n",
        "      <td>#8BA38D</td>\n",
@@ -223,14 +223,14 @@
        "      <td>Micro-PVM</td>\n",
        "      <td>#94AF97</td>\n",
        "      <td>3</td>\n",
-       "      <td>Non-Neuronal</td>\n",
+       "      <td>Other</td>\n",
        "      <td>#808080</td>\n",
        "      <td>108</td>\n",
        "      <td>323</td>\n",
-       "      <td>323</td>\n",
+       "      <td>114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>114</td>\n",
+       "      <th>114</th>\n",
        "      <td>115</td>\n",
        "      <td>PVM_2</td>\n",
        "      <td>#73967F</td>\n",
@@ -238,14 +238,14 @@
        "      <td>Micro-PVM</td>\n",
        "      <td>#94AF97</td>\n",
        "      <td>3</td>\n",
-       "      <td>Non-Neuronal</td>\n",
+       "      <td>Other</td>\n",
        "      <td>#808080</td>\n",
        "      <td>107</td>\n",
        "      <td>30</td>\n",
-       "      <td>30</td>\n",
+       "      <td>115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>115</td>\n",
+       "      <th>115</th>\n",
        "      <td>116</td>\n",
        "      <td>PVM_3</td>\n",
        "      <td>#709F6D</td>\n",
@@ -253,11 +253,11 @@
        "      <td>Micro-PVM</td>\n",
        "      <td>#94AF97</td>\n",
        "      <td>3</td>\n",
-       "      <td>Non-Neuronal</td>\n",
+       "      <td>Other</td>\n",
        "      <td>#808080</td>\n",
        "      <td>109</td>\n",
        "      <td>23</td>\n",
-       "      <td>23</td>\n",
+       "      <td>116</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,36 +278,36 @@
        "114         115           PVM_2       #73967F           22      Micro-PVM   \n",
        "115         116           PVM_3       #709F6D           22      Micro-PVM   \n",
        "\n",
-       "    subclass_color  class_id   class_label class_color   cl  cluster_size  \\\n",
-       "0          #DA808C         1     GABAergic     #F05A28    1           700   \n",
-       "1          #DA808C         1     GABAergic     #F05A28    2           618   \n",
-       "2          #DA808C         1     GABAergic     #F05A28    3           814   \n",
-       "3          #DA808C         1     GABAergic     #F05A28    4          1276   \n",
-       "4          #DA808C         1     GABAergic     #F05A28    5          1288   \n",
-       "..             ...       ...           ...         ...  ...           ...   \n",
-       "111        #665547         3  Non-Neuronal     #808080  103          1532   \n",
-       "112        #94AF97         3  Non-Neuronal     #808080  106          8110   \n",
-       "113        #94AF97         3  Non-Neuronal     #808080  108           323   \n",
-       "114        #94AF97         3  Non-Neuronal     #808080  107            30   \n",
-       "115        #94AF97         3  Non-Neuronal     #808080  109            23   \n",
+       "    subclass_color  class_id class_label class_color   cl  cluster_size  \\\n",
+       "0          #DA808C         1   GABAergic     #F05A28    1           700   \n",
+       "1          #DA808C         1   GABAergic     #F05A28    2           618   \n",
+       "2          #DA808C         1   GABAergic     #F05A28    3           814   \n",
+       "3          #DA808C         1   GABAergic     #F05A28    4          1276   \n",
+       "4          #DA808C         1   GABAergic     #F05A28    5          1288   \n",
+       "..             ...       ...         ...         ...  ...           ...   \n",
+       "111        #665547         3       Other     #808080  103          1532   \n",
+       "112        #94AF97         3       Other     #808080  106          8110   \n",
+       "113        #94AF97         3       Other     #808080  108           323   \n",
+       "114        #94AF97         3       Other     #808080  107            30   \n",
+       "115        #94AF97         3       Other     #808080  109            23   \n",
        "\n",
-       "     size  \n",
-       "0     700  \n",
-       "1     618  \n",
-       "2     814  \n",
-       "3    1276  \n",
-       "4    1288  \n",
-       "..    ...  \n",
-       "111  1532  \n",
-       "112  8110  \n",
-       "113   323  \n",
-       "114    30  \n",
-       "115    23  \n",
+       "     tree_order  \n",
+       "0             1  \n",
+       "1             2  \n",
+       "2             3  \n",
+       "3             4  \n",
+       "4             5  \n",
+       "..          ...  \n",
+       "111         112  \n",
+       "112         113  \n",
+       "113         114  \n",
+       "114         115  \n",
+       "115         116  \n",
        "\n",
        "[116 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,6 +323,7 @@
     "print(np.sum(np.isnan(clusterMemb['x'].values)))\n",
     "\n",
     "clusterAnn = pd.read_csv('../data/raw/allen/yao2020/cluster.annotation.csv')\n",
+    "clusterAnn = clusterAnn.sort_values('cluster_id')\n",
     "clusterAnn"
    ]
   },
@@ -812,6 +813,7 @@
     "# Quickly update cluster annotations if needed\n",
     "\n",
     "clusterAnn = pd.read_csv('../data/raw/allen/yao2020/cluster.annotation.csv')\n",
+    "clusterAnn = clusterAnn.sort_values('cluster_id')\n",
     "clusterColors = np.array(clusterAnn['cluster_color'])\n",
     "clusterNames  = np.array(clusterAnn['cluster_label'])\n",
     "neural_clusters = np.arange(np.where(clusterNames=='Meis2')[0][0])\n",
