--- a/code/allen-data-preprocess.ipynb
+++ b/code/allen-data-preprocess.ipynb
@@ -4,7 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Process Allen data"
+    "# Process Allen data\n",
+    "\n",
+    "This notebook requires downloading raw Allen Institute data.\n",
+    "\n",
+    "**Yao et al. 2020 data**\n",
+    "\n",
+    "  *  Consensus clustering results `cluster_annotation.csv` and `cluster_membership.csv` can be downloaded from here http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/scell/10X/processed/analysis/RNASeq_integrated/ but are also provided in this repository.\n",
+    "  *  Get `umi_counts.h5` files from the following folders and put them into folders with the same names in our `data/raw/allen/yao2020/`:\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/scell/10X/processed/analysis/10X_cells_v2_AIBS/\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/scell/10X/processed/analysis/10X_cells_v3_AIBS/\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/sncell/10X/processed/analysis/10X_nuclei_v2_AIBS/\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/sncell/10X/processed/analysis/10X_nuclei_v3_AIBS/\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/sncell/10X/processed/analysis/10X_nuclei_v3_Broad/\n",
+    "  * Get `exon.counts.csv.gz` and `intron.counts.csv.gz` files from the following folders and put them into respective folders (`SmartSeq_cells_AIBS` and `SmartSeq_nuclei_AIBS`) in our `data/raw/allen/yao2020/`:\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/scell/SMARTer/processed/analysis/SMARTer_cells_MOp/\n",
+    "    * http://data.nemoarchive.org/biccn/grant/zeng/zeng/transcriptome/sncell/SMARTer/processed/analysis/SMARTer_nuclei_MOp/\n",
+    "    \n",
+    "**Tasic et al. 2018 data**\n",
+    "\n",
+    "Download the data from here: http://celltypes.brain-map.org/rnaseq and unpack into `data/raw/allen/tasic2018/`. Direct links:\n",
+    "\n",
+    "  * VISp: http://celltypes.brain-map.org/api/v2/well_known_file_download/694413985\n",
+    "  * ALM: http://celltypes.brain-map.org/api/v2/well_known_file_download/694413179\n",
+    "\n",
+    "Information about cluster colors and labels is contained in the `sample_heatmap_plot_data.csv` contained in this repository. It can also be obtrained through the interactive data browser http://celltypes.brain-map.org/rnaseq/mouse/v1-alm: go to \"Sample Heatmaps\", click \"Build Plot!\" and then \"Download data as CSV\"."
    ]
   },
   {
@@ -791,6 +815,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quickly update cluster annotations if needed\n",
+    "No need to run this unless annotation changed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -810,8 +842,6 @@
     }
    ],
    "source": [
-    "# Quickly update cluster annotations if needed\n",
-    "\n",
     "clusterAnn = pd.read_csv('../data/raw/allen/yao2020/cluster.annotation.csv')\n",
     "clusterAnn = clusterAnn.sort_values('cluster_id')\n",
     "clusterColors = np.array(clusterAnn['cluster_color'])\n",
@@ -833,15 +863,6 @@
     "    \n",
     "    with open('../data/processed/reduced-allen-data/' + folder + '.pickle', 'wb') as f:\n",
     "        pickle.dump(m1data, f, protocol=4)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m1data = load_allen_data('10X_nuclei_v3_Broad')"
    ]
   },
   {
