upload some pickles

--- a/code/allen-data-preprocess.ipynb
+++ b/code/allen-data-preprocess.ipynb
@@ -712,6 +712,7 @@
     "        m1data['counts'][subset_cells,:], n=geneNumber, decay=1.5, plot=False, threshold=threshold)\n",
     "    data_reduced = {'counts': m1data['counts'][:,subset_impGenes][subset_cells,:],\n",
     "                    'genes' : m1data['genes'][subset_impGenes],\n",
+    "                    'cells' : m1data['cells'][subset_cells],\n",
     "                    'clusters': m1data['clusters'][subset_cells],\n",
     "                    'clusterColors': m1data['clusterColors'][clusters_to_keep], \n",
     "                    'clusterNames': m1data['clusterNames'][clusters_to_keep],\n",
@@ -745,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -787,8 +788,8 @@
       "Chosen offset: 0.41\n",
       "Chosen offset: 0.44\n",
       "Chosen offset: 0.42\n",
-      "CPU times: user 9min 9s, sys: 2min 13s, total: 11min 23s\n",
-      "Wall time: 10min 12s\n"
+      "CPU times: user 7min 34s, sys: 1min 33s, total: 9min 8s\n",
+      "Wall time: 22min 12s\n"
      ]
     }
    ],
@@ -3644,7 +3645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
